<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/schoolName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="12dp"
            tools:text="Epic High School"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/schoolOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/droid_serif_bold"
            android:textColor="@color/purple_500"
            android:text="@string/overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/schoolName"/>

        <TextView
            android:id="@+id/schoolDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:fontFamily="@font/droid_serif"
            tools:text="diwe wquhd wdhw oisdiugsw"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/schoolOverview"/>

        <ImageView
            android:id="@+id/schoolLocationIcon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/baseline_location_24"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/schoolDescription" />

        <TextView
            android:id="@+id/schoolLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textAlignment="textStart"
            android:fontFamily="@font/droid_serif"
            tools:text="Location: UES"
            android:maxLines="1"
            app:layout_constraintStart_toEndOf="@id/schoolLocationIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/schoolLocationIcon"
            app:layout_constraintBottom_toBottomOf="@id/schoolLocationIcon"/>

        <ImageView
            android:id="@+id/schoolWebsiteIcon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/baseline_web_24"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/schoolLocationIcon" />

        <TextView
            android:id="@+id/schoolWebsite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textAlignment="textStart"
            android:fontFamily="@font/droid_serif"
            tools:text="www.example.co.us"
            app:layout_constraintStart_toEndOf="@id/schoolWebsiteIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/schoolWebsiteIcon"
            app:layout_constraintBottom_toBottomOf="@id/schoolWebsiteIcon"/>

        <ImageView
            android:id="@+id/schoolGradesIcon"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/baseline_school_24"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/schoolWebsiteIcon" />

        <TextView
            android:id="@+id/schoolGrades"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textAlignment="textStart"
            android:fontFamily="@font/droid_serif"
            app:layout_constraintStart_toEndOf="@id/schoolGradesIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/schoolGradesIcon"
            app:layout_constraintBottom_toBottomOf="@id/schoolGradesIcon"/>

        <TextView
            android:id="@+id/avgScores"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/avg_scores"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/purple_500"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/schoolGradesIcon"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/droid_serif_bold"/>

        <LinearLayout
            android:id="@+id/scoresLayout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/avgScores"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardElevation="8dp"
                app:cardBackgroundColor="@color/cardBackground"
                android:layout_margin="16dp"
                android:padding="16dp"
                android:elevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/numOfTestTakers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="32sp"
                        android:layout_margin="12dp"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:id="@+id/numOfTestTakersDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/num_of_test_takers"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardElevation="8dp"
                app:cardBackgroundColor="@color/cardBackground"
                android:layout_margin="16dp"
                android:padding="16dp"
                android:elevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/readingScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="32sp"
                        android:layout_margin="12dp"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:id="@+id/readingScoreDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/reading"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/scoresLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scoresLayout1"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/cardBackground"
                app:cardElevation="8dp"
                android:padding="16dp"
                android:elevation="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/mathScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="12dp"
                        android:textSize="32sp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:id="@+id/mathScoreDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/math"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="16dp"
                app:cardElevation="8dp"
                app:cardBackgroundColor="@color/cardBackground"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/writingScore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="32sp"
                        android:layout_margin="12dp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:id="@+id/writingScoreDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/writing"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <TextView
            android:id="@+id/extraCurrActivities"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/purple_500"
            app:layout_constraintTop_toBottomOf="@id/scoresLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/droid_serif_bold"
            android:text="@string/extra_curr_activities_title"/>

        <TextView
            android:id="@+id/schoolActivities"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textAlignment="textStart"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/droid_serif"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/extraCurrActivities"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>